	(PokerRendererTests.MockPokerProtocol.getCurrentGameId): Wrote method.
	(PokerRendererTests.test05_sitOutButNoGame): Wrote method.
	(PokerRendererTests.MockGame): Wrote method.
	(PokerRendererTests.MockPlayer): Created mock up.
	(PokerRendererTests.test06_sitOutButWithGameBadPlayer): Wrote test.
	(PokerRendererTests.test07_chatFormatMessage): Wrote method.

2008-07-07  Johan Euphrosine  <proppy@aminche.com>

	* Release 1.7.0

	* pokernetwork/pokerauth.py (get_auth_instance):
	Add authentification modularity.
	* pokernetwork/pokerauthmysql.py:
	Add authenfification module based on a foreign mysql database.
	* tests/test-pokerauth.py.in:
	Add tests for authentification modules lookup.

2008-07-06  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokerui/pokerrenderer.py (PokerInteractors.interactorSelected):
	Fixed reference to unknown variable "event".

	* tests/test-pokerrenderer.py.in
	(PokerInteractorsTests.MockConfig): Created mock up.
	(PokerInteractorsTests.MockPokerRenderer): Wrote method.
	(PokerInteractorsTests.MockPokerRenderer.render): Wrote method.
	(PokerInteractorsTests.test02_interactorDisplayNodeUnknownGame):
	Wrote method.
	(PokerInteractorsTests.MockPokerProtocol.getCurrentGameId): Wrote
	method.
	(PokerInteractorsTests.MockSettings): Created mock up.
	(PokerInteractorsTests.test03_interactorDisplayKnownGameSameState):
	Wrote method.
	(PokerInteractorsTests.test04_interactorDisplayKnownGameChangedState):
	Wrote method.
	(PokerInteractorsTests.test05_interactorsSyncDisplay_NoFactoryDisplay):
	Wrote method.
	(PokerInteractorsTests.MockPokerFactory.__init__): added
	self.display initialization.
	(PokerInteractorsTests.tearDown): Wrote method.
	(PokerInteractorsTests.setUp): Added override of PokerInteractor.
	(PokerInteractorsTests.MockInteractor.__init__): Set init to have
	the correct number of arguments.
	(PokerInteractorsTests.test06_interactorsSyncDisplay_displayOn):
	Wrote method.
	(PokerInteractorsTests.MockInteractor.select): Wrote method.